feat: refactor TeacherService to use TeacherRepository and improve teacher management processes