@@ -1,188 +1,203 @@
 package com.projecthub.service;
 
-import java.util.List;
-import java.util.stream.Collectors;
-
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
-import com.projecthub.dto.AppUserSummary;
-import com.projecthub.dto.ProjectSummary;
-import com.projecthub.dto.TeamSummary;
 import com.projecthub.exception.ResourceNotFoundException;
 import com.projecthub.mapper.TeamMapper;
+import com.projecthub.dto.TeamSummary;
 import com.projecthub.model.AppUser;
 import com.projecthub.model.Cohort;
 import com.projecthub.model.School;
 import com.projecthub.model.Team;
-import com.projecthub.repository.jpa.CohortRepository;
-import com.projecthub.repository.jpa.SchoolRepository;
-import com.projecthub.repository.custom.CustomTeamRepository;
+import com.projecthub.repository.AppUserRepository;
+import com.projecthub.repository.CohortRepository;
+import com.projecthub.repository.SchoolRepository;
+import com.projecthub.repository.TeamRepository;
 
-import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.tags.Tag;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
+import java.util.List;
+
+/**
+ * Service class for managing teams.
+ * Handles creation, updating, deletion, and retrieval of teams.
+ */
+ 
+/**
+ * Creates a new team based on the provided team summary.
+ *
+ * @param teamSummary the summary information of the team to be created
+ * @return the summary information of the created team
+ * @throws IllegalArgumentException if the team summary is invalid
+ */
+ 
+/**
+ * Updates an existing team with the provided team summary.
+ *
+ * @param teamId the ID of the team to update
+ * @param teamSummary the summary information to update the team with
+ * @return the updated team summary
+ * @throws IllegalArgumentException if the team summary is invalid
+ */
+ 
+/**
+ * Deletes the team with the specified ID.
+ *
+ * @param teamId the ID of the team to delete
+ */
+ 
+/**
+ * Retrieves the team with the specified ID.
+ *
+ * @param teamId the ID of the team to retrieve
+ * @return the summary information of the retrieved team
+ * @throws ResourceNotFoundException if the team with the specified ID is not found
+ */
+ 
+/**
+ * Retrieves all teams.
+ *
+ * @return a list of summary information for all teams
+ */
+ 
+/**
+ * Adds a user to the specified team.
+ *
+ * @param teamId the ID of the team to add the user to
+ * @param userId the ID of the user to add
+ * @return the updated team summary
+ */
+ 
+/**
+ * Removes a user from the specified team.
+ *
+ * @param teamId the ID of the team to remove the user from
+ * @param userId the ID of the user to remove
+ * @return the updated team summary
+ * @throws IllegalArgumentException if the user is not a member of the team
+ */
 @Service
-@Tag(name = "Team Service", description = "Operations pertaining to teams in ProjectHub")
 public class TeamService {
 
     private static final Logger logger = LoggerFactory.getLogger(TeamService.class);
 
-    private final CustomTeamRepository teamRepository;
-    private final UserService userService;
+    private final TeamRepository teamRepository;
+    private final CohortRepository cohortRepository;
+    private final SchoolRepository schoolRepository;
+    private final AppUserRepository appUserRepository;
+    private final TeamMapper teamMapper;
 
-    @Autowired
-    private CohortRepository cohortRepository;
+    public TeamService(
+            TeamRepository teamRepository,
+            CohortRepository cohortRepository,
+            SchoolRepository schoolRepository,
+            AppUserRepository appUserRepository,
+            TeamMapper teamMapper) {
 
-    @Autowired
-    private SchoolRepository schoolRepository;
-
-    @Autowired
-    private TeamMapper teamMapper;
-
-    public TeamService(CustomTeamRepository teamRepository, UserService userService) {
         this.teamRepository = teamRepository;
-        this.userService = userService;
+        this.cohortRepository = cohortRepository;
+        this.schoolRepository = schoolRepository;
+        this.appUserRepository = appUserRepository;
+        this.teamMapper = teamMapper;
     }
 
-    /**
-     * Adds a user to a team.
-     *
-     * @param teamId the ID of the team
-     * @param userId the ID of the user
-     * @return the updated TeamSummary
-     * @throws ResourceNotFoundException if the team or user is not found
-     * @throws IllegalArgumentException if teamId or userId is null
-     */
-    @Operation(summary = "Add a user to a team")
     @Transactional
-    public TeamSummary addUserToTeam(Long teamId, Long userId) throws ResourceNotFoundException {
-        logger.info("Adding user {} to team {}", userId, teamId);
-    
-        if (teamId == null || userId == null) {
-            throw new IllegalArgumentException("Team ID and User ID cannot be null");
-        }
-    
-        // Retrieve the team and user entities
-        Team team = teamRepository.findById(teamId)
-                .orElseThrow(() -> new ResourceNotFoundException("Team not found with ID: " + teamId));
-    
-        AppUser user = userService.getAppUserById(userId)
-                .orElseThrow(() -> new ResourceNotFoundException("User not found with ID: " + userId));
-    
-        // Add user to team
-        team.getMembers().add(user);
-        teamRepository.save(team);
-    
-        logger.info("User {} added to team {}", userId, teamId);
-        return teamMapper.toTeamSummary(team);
-    }
-
-    /**
-     * Retrieves all teams.
-     *
-     * @return list of TeamSummary
-     */
-    @Operation(summary = "Get all teams")
-    public List<TeamSummary> getAllTeams() {
-        logger.info("Retrieving all teams");
-        return teamRepository.findAll().stream()
-                .map(teamMapper::toTeamSummary)
-                .collect(Collectors.toList());
-    }
-
-    /**
-     * Retrieves a team by ID.
-     *
-     * @param id the ID of the team
-     * @return TeamSummary
-     * @throws ResourceNotFoundException if the team is not found
-     */
-    @Operation(summary = "Get team by ID")
-    public TeamSummary getTeamById(Long id) throws ResourceNotFoundException {
-        logger.info("Retrieving team with ID {}", id);
-
-        if (id == null) {
-            throw new IllegalArgumentException("Team ID cannot be null");
-        }
-
-        return teamRepository.findById(id)
-                .map(teamMapper::toTeamSummary)
-                .orElseThrow(() -> new ResourceNotFoundException("Team not found with ID: " + id));
-    }
-
-    @Operation(summary = "Create a new team")
     public TeamSummary createTeam(TeamSummary teamSummary) {
-        // Map TeamSummary to Team entity
-        School school = getSchoolById(teamSummary.getSchoolId());
-        Cohort cohort = getCohortById(teamSummary.getCohortId());
-        Team teamEntity = teamMapper.toTeam(teamSummary, school, cohort);
-        Team savedTeam = teamRepository.save(teamEntity);
+        logger.info("Creating a new team");
+        validateTeamSummary(teamSummary);
+
+        School school = schoolRepository.getReferenceById(teamSummary.getSchoolId());
+        Cohort cohort = cohortRepository.getReferenceById(teamSummary.getCohortId());
+
+        Team team = teamMapper.toTeam(teamSummary, school, cohort);
+        Team savedTeam = teamRepository.save(team);
+
+        logger.info("Team created with ID {}", savedTeam.getId());
         return teamMapper.toTeamSummary(savedTeam);
     }
 
-    @Operation(summary = "Delete a team by ID")
-    public void deleteTeam(Long id) throws ResourceNotFoundException {
-        if (!teamRepository.findById(id).isPresent()) {
-            throw new ResourceNotFoundException("Team not found with ID: " + id);
-        }
-        teamRepository.deleteById(id);
-    }
+    @Transactional
+    public TeamSummary updateTeam(Long teamId, TeamSummary teamSummary) {
+        logger.info("Updating team with ID {}", teamId);
+        validateTeamSummary(teamSummary);
 
-    public List<TeamSummary> getTeamsByCohortId(Long cohortId) {
-        return teamRepository.findByCohortId(cohortId).stream()
-                .map(teamMapper::toTeamSummary)
-                .collect(Collectors.toList());
-    }
+        Team team = teamRepository.getReferenceById(teamId);
+        teamMapper.updateTeamFromSummary(teamSummary, team);
 
-    @Operation(summary = "Save a team")
-    public Team saveTeam(Team team) {
-        return teamRepository.save(team);
-    }
-
-    @Operation(summary = "Update a team")
-    public TeamSummary updateTeam(TeamSummary teamSummary) {
-        // Retrieve the existing team
-        var existingTeam = teamRepository.findById(teamSummary.getId())
-                .orElseThrow(() -> new ResourceNotFoundException("Team not found with id " + teamSummary.getId()));
-
-        // Update the team's properties
-        existingTeam.setName(teamSummary.getName());
-        existingTeam.setCohort(getCohortById(teamSummary.getCohortId()));
-
-        // Save the updated team
-        Team updatedTeam = teamRepository.save(existingTeam);
-
-        // Convert the updated team entity back to a TeamSummary and return it
+        Team updatedTeam = teamRepository.save(team);
+        logger.info("Team updated with ID {}", updatedTeam.getId());
         return teamMapper.toTeamSummary(updatedTeam);
     }
 
-    public Cohort getCohortById(Long cohortId) {
-        return cohortRepository.findById(cohortId)
-                .orElseThrow(() -> new ResourceNotFoundException("Cohort not found with id " + cohortId));
+    @Transactional
+    public void deleteTeam(Long teamId) {
+        logger.info("Deleting team with ID {}", teamId);
+        teamRepository.deleteById(teamId);
+        logger.info("Team deleted with ID {}", teamId);
     }
 
-    public List<ProjectSummary> getProjectsByTeamId(Long teamId) {
+    public TeamSummary getTeamById(Long teamId) {
+        logger.info("Retrieving team with ID {}", teamId);
         Team team = teamRepository.findById(teamId)
                 .orElseThrow(() -> new ResourceNotFoundException("Team not found with ID: " + teamId));
-        return team.getProjects().stream()
-                .map(ProjectSummary::new)
-                .collect(Collectors.toList());
+        return teamMapper.toTeamSummary(team);
     }
 
-    public List<AppUserSummary> getMembersByTeamId(Long teamId) {
-        Team team = teamRepository.findById(teamId)
-                .orElseThrow(() -> new ResourceNotFoundException("Team not found with ID: " + teamId));
-        return team.getMembers().stream()
-                .map(teamMapper::toAppUserSummary)
-                .collect(Collectors.toList());
+    public List<TeamSummary> getAllTeams() {
+        logger.info("Retrieving all teams");
+        List<Team> teams = teamRepository.findAll();
+        return teams.stream()
+                .map(teamMapper::toTeamSummary)
+                .toList();
     }
 
-    public School getSchoolById(Long schoolId) {
-        return schoolRepository.findById(schoolId)
-                .orElseThrow(() -> new ResourceNotFoundException("School not found with ID: " + schoolId));
+    @Transactional
+    public TeamSummary addUserToTeam(Long teamId, Long userId) {
+        logger.info("Adding user {} to team {}", userId, teamId);
+
+        Team team = teamRepository.getReferenceById(teamId);
+        AppUser user = appUserRepository.getReferenceById(userId);
+
+        team.getMembers().add(user);
+        Team updatedTeam = teamRepository.save(team);
+
+        logger.info("User {} added to team {}", userId, teamId);
+        return teamMapper.toTeamSummary(updatedTeam);
+    }
+
+    @Transactional
+    public TeamSummary removeUserFromTeam(Long teamId, Long userId) {
+        logger.info("Removing user {} from team {}", userId, teamId);
+
+        Team team = teamRepository.getReferenceById(teamId);
+        AppUser user = appUserRepository.getReferenceById(userId);
+
+        if (!team.getMembers().remove(user)) {
+            throw new IllegalArgumentException("User is not a member of the team");
+        }
+
+        Team updatedTeam = teamRepository.save(team);
+        logger.info("User {} removed from team {}", userId, teamId);
+        return teamMapper.toTeamSummary(updatedTeam);
+    }
+
+    private void validateTeamSummary(TeamSummary teamSummary) {
+        if (teamSummary == null) {
+            throw new IllegalArgumentException("TeamSummary cannot be null");
+        }
+        if (teamSummary.getName() == null || teamSummary.getName().isEmpty()) {
+            throw new IllegalArgumentException("Team name cannot be null or empty");
+        }
+        if (teamSummary.getCohortId() == null) {
+            throw new IllegalArgumentException("Cohort ID cannot be null");
+        }
+        if (teamSummary.getSchoolId() == null) {
+            throw new IllegalArgumentException("School ID cannot be null");
+        }
+    }
+
+    public TeamSummary[] getTeamsByCohortId(Long id) {
+        throw new UnsupportedOperationException("Not supported yet.");
     }
 }
